# app_transcoder

./: CMakeLists.txt  README  app_transcoder.c  app_transcoder.kdev4
CMakeModules/: Findavcodec.cmake
